--- a/client/src/index.css
+++ b/client/src/index.css
@@ -23,7 +23,7 @@ body {
   padding: 1rem 3rem;
   padding-bottom: 2rem;
   border-radius: 0.5rem;
-  border-top: rgb(66, 246, 46) 0.5rem solid;
+  border-top: rgb(255, 11, 11) 0.5rem solid;
 }
 
 h2 {
@@ -50,7 +50,7 @@ input {
 }
 
 button {
-  background-color: rgb(66, 246, 46);
+  background-color: rgb(216, 2, 2);
   color: white;
   border: none;
   padding: 0.5rem;
@@ -58,7 +58,10 @@ button {
   text-transform: uppercase;
   cursor: pointer;
   border-radius: 0.3rem;
-  border: 1px solid rgb(19, 165, 2);
+}
+
+button:active {
+  opacity: 0.5;
 }
 
 span a {
@@ -66,23 +69,30 @@ span a {
   color: rgb(43, 7, 111);
 }
 
-.private button {
+.logout {
+  margin: 0;
+  padding: 0;
+}
+
+.App nav {
+  display: inline-block;
+  margin-left: 113%;
+}
+
+nav button {
   background-color: black;
-  border-radius: 16px;
+  border-radius: 18px;
   border: 1px solid black;
 }
 
-.private {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  margin: 0;
-  padding: 0;
-  margin-top: 600px;
-  margin-left: 1400px;
-}
-
-button:hover {
+nav button:hover {
   background-color: white;
   color: black;
+}
+
+.App .canvas {
+  margin: 0;
+  padding: 0;
+  margin-top: 0%;
+  margin-bottom: 4%;
 }
